Fix bug in mpegts muxer which affects KLV async stream generation.

Fixes ticket #7597.

Signed-off-by: Peter Ross <pross@xvid.org>